fix: horizontal scroll

--- a/src/sass/components/_buttons-header.scss
+++ b/src/sass/components/_buttons-header.scss
@@ -7,7 +7,6 @@
   justify-content: center;
   list-style: none;
   padding: 0px;
-  margin-left: 20px;
 }
 
 .btn-header {
@@ -43,11 +42,11 @@
     margin-right: 20px;
     background-color: $button-bg-color-transparent;
     &:is(:hover, :focus, :focus-within) {
-        border: 1px solid $button-bg-color-accent-priamry;
-        outline: none;
-        color: $button-bg-color-accent-priamry;
-      }
-    &--active{
+      border: 1px solid $button-bg-color-accent-priamry;
+      outline: none;
+      color: $button-bg-color-accent-priamry;
+    }
+    &--active {
       background-color: $button-bg-color-accent-priamry;
     }
     @include mq(tablet) {
@@ -64,7 +63,7 @@
       outline: none;
       color: $button-bg-color-accent-priamry;
     }
-    &--active{
+    &--active {
       background-color: $button-bg-color-accent-priamry;
     }
   }
